# docker-qt-android

./: .gitlab-ci.yml  Dockerfile
tools/qt/: zipalign.patch
tools/qt/dummyQmlProject/: CMakeLists.txt  dummyQmlProject.pro  main.cpp
tools/qt/dummyQmlProject/android/: AndroidManifest.xml
